--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,13 +1,13 @@
 /******* Customized Bootstrap ********/
 
-$primary: #348E38;
-$secondary: #525368;
-$light: #E8F5E9;
-$dark: #0F4229;
+$primary: #2f5a81;
+$secondary: #526868;
+$light: #f3f5e8;
+$dark: #0f3242;
 
-$font-family-base: 'Open Sans', sans-serif;
+$font-family-base: "Open Sans", sans-serif;
 
-$headings-font-family: 'Jost', sans-serif;
+$headings-font-family: "Jost", sans-serif;
 
 $body-color: $secondary;
 
