--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 /********** Template CSS **********/
+body {
+    color: rgb(15, 20, 66) !important;
+}
+
 :root {
-    --primary: #348E38;
-    --secondary: #525368;
+    --primary: #0A2647;
+    --secondary: #526860;
     --light: #E8F5E9;
     --dark: #0F4229;
 }
@@ -166,7 +170,7 @@ h6,
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: rgba(15, 66, 41, .6);
+    background: rgba(15, 20, 66, 0.6);
     z-index: 1;
 }
 
@@ -199,7 +203,7 @@ h6,
 }
 
 .page-header {
-    background: linear-gradient(rgba(15, 66, 41, .6), rgba(15, 66, 41, .6)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(15, 20, 66, 0.6), rgba(15, 20, 66, 0.6)), url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -227,7 +231,7 @@ h6,
 /*** Facts & Quote ***/
 .facts,
 .quote {
-    background: rgba(15, 66, 41, .6);
+    background: rgba(15, 20, 66, 0.6);
 }
 
 
@@ -264,12 +268,12 @@ h6,
 
 .service-item .service-text {
     background: #FFFFFF;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.08);
     transition: .3s;
 }
 
 .service-item:hover .service-text {
-    background: rgba(15, 66, 41, .6);
+    background: rgba(15, 20, 66, 0.6);
 }
 
 .service-item .service-text h4,
@@ -348,7 +352,7 @@ h6,
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(15, 66, 41, .6);
+    background: rgba(15, 20, 66, 0.6);
     transition: .5s;
 }
 
