--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     --primary: #497bb4;
     --secondary: #526860;
     --light: #e8eaf5;
-    --dark: #0F4229;
+    --dark: #267a8c;
 }
 
 .back-to-top {
@@ -108,14 +108,18 @@ h6,
 
 .navbar .navbar-brand,
 .navbar a.btn {
-    height: 80px
+    height: auto;
+}
+
+.navbar{
+    height: 100px;
 }
 
 .navbar .navbar-nav .nav-link {
     margin-right: 35px;
     padding: 25px 0;
     color: var(--dark);
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     outline: none;
 }
@@ -411,18 +415,18 @@ h6,
 .team-item .team-text {
     position: absolute;
     width: calc(100% - 45px);
-    left: -100%;
+    /*left: -100%;*/
     bottom: 45px;
     padding: 1.5rem;
     background: #FFFFFF;
     border-radius: 0 4px 4px 0;
-    opacity: 0;
+    /*opacity: 0;*/
     transition: .5s;
 }
 
 .team-item:hover .team-text {
-    left: 0;
-    opacity: 1;
+    /*left: 0;*/
+    /*opacity: 1;*/
 }
 
 .team-item .team-social .btn {
@@ -517,7 +521,8 @@ h6,
 
 .copyright {
     color: var(--light);
-    background: #072A19;
+    border-top: 1px solid #fff;
+    background: var(--dark);
 }
 
 .copyright a {
@@ -526,4 +531,106 @@ h6,
 
 .copyright a:hover {
     color: var(--primary);
+}
+
+.accordion .accordion-item {
+    border: none !important;
+}
+
+.accordion .accordion-item {
+    border-bottom: 1px solid #e5e5e5 !important;
+}
+.accordion .accordion-item button[aria-expanded=true] {
+    border-bottom: 1px solid var(--dark) !important;
+}
+.accordion button {
+    position: relative;
+    display: block;
+    text-align: left;
+    width: 100%;
+    padding: 1em 0;
+    color: #7288a2;
+    font-size: 1.15rem;
+    font-weight: 400;
+    border: none;
+    background: none;
+    outline: none;
+}
+.accordion button:hover, .accordion button:focus {
+    cursor: pointer;
+    color: var(--dark);
+}
+.accordion button:hover::after, .accordion button:focus::after {
+    cursor: pointer;
+    color: var(--dark);
+    border: 1px solid var(--dark);
+}
+.accordion button .accordion-title {
+    padding: 1em 1.5em 1em 0;
+}
+.accordion button .icon {
+    display: inline-block;
+    position: absolute;
+    top: 18px;
+    right: 0;
+    width: 22px;
+    height: 22px;
+    border: 1px solid;
+    border-radius: 22px;
+}
+.accordion button .icon::before {
+    display: block;
+    position: absolute;
+    content: "";
+    top: 9px;
+    left: 5px;
+    width: 10px;
+    height: 2px;
+    background: currentColor;
+}
+.accordion button .icon::after {
+    display: block;
+    position: absolute;
+    content: "";
+    top: 5px;
+    left: 9px;
+    width: 2px;
+    height: 10px;
+    background: currentColor;
+}
+.accordion button[aria-expanded=true] {
+    color: var(--dark);
+}
+.accordion button[aria-expanded=true] .icon::after {
+    width: 0;
+}
+.accordion button[aria-expanded=true] + .accordion-content {
+    opacity: 1;
+    max-height: 100%;
+    transition: all 200ms linear;
+    will-change: opacity, max-height;
+}
+.accordion .accordion-content {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 200ms linear, max-height 200ms linear;
+    will-change: opacity, max-height;
+}
+.accordion .accordion-content p {
+    font-size: 1rem;
+    font-weight: 300;
+    margin: 2em 0;
+}
+.social-buttons a{
+    width: 40px;
+}
+.facebook{
+    background: #3b5998;
+}
+.twitter{
+    background: #1DA1F2;
+}
+.instagram{
+    background: #C13584;
 }
