insert pages and change color text

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     --primary: #497bb4;
     --secondary: #526860;
     --light: #e8eaf5;
-    --dark: #267a8c;
+    --dark: #000000;
 }
 
 .back-to-top {
