--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,6 @@ h6,
 /*** Service ***/
 .service-item {
     position: relative;
-    text-align: center;
 }
 
 .service-item .service-img {
@@ -281,6 +280,8 @@ h6,
     background: #FFFFFF;
     box-shadow: 0 0 45px rgba(95, 124, 219, 0.507);
     transition: .3s;
+    width: 100%;
+    height: 100%;
 }
 
 .service-item:hover .service-text {
