--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 :root {
-    --primary: #497bb4;
+    --primary: #1bb0ce;
     --secondary: #526860;
     --light: #e8eaf5;
     --dark: #000000;
