--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 :root {
-    --primary: white;
+    --primary: #0097d2;
     --secondary: #526860;
     --light: #e8eaf5;
     --dark: #000000;
@@ -536,7 +536,7 @@ h6,
 }
 
 .footer .btn.btn-link:hover {
-    color: var(--primary);
+    color: white;
     letter-spacing: 1px;
     box-shadow: none;
 }
