--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 :root {
-    --primary: #0097d2;
+    --primary: #1bb0ce;
     --secondary: #526860;
     --light: #e8eaf5;
     --dark: #000000;
@@ -126,7 +126,7 @@ h6,
 
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
-    color: #dc3545;
+    color: var(--primary);
 }
 
 .navbar .dropdown-toggle::after {
@@ -249,16 +249,11 @@ h6,
 /*** Service ***/
 .service-item {
     position: relative;
-    resize: none;
 }
 
 .dop-info {
     position:absolute;
-    bottom: 12px;
-}
-
-.steps {
-    resize: none;
+    bottom: 22px;
 }
 
 .service-item .service-img {
@@ -291,8 +286,7 @@ h6,
     box-shadow: 0 0 45px rgba(95, 124, 219, 0.507);
     transition: .3s;
     width: 100%;
-    height: 267px;
-    resize: none;
+    height: 100%;
 }
 
 .service-item:hover .service-text {
@@ -451,12 +445,6 @@ h6,
     /*opacity: 1;*/
 }
 
-.border-bottom {
-    padding-bottom: 40px;
-    margin-bottom: 43px;
-    border-bottom: #0097d2 solid 2.5px !important;
-}
-
 .team-item .team-social .btn {
     background: var(--light);
     color: var(--primary);
@@ -527,7 +515,7 @@ h6,
     margin-bottom: 5px;
     padding: 0;
     text-align: left;
-    color: white;
+    color: var(--light);
     font-weight: normal;
     text-transform: capitalize;
     transition: .3s;
@@ -542,7 +530,7 @@ h6,
 }
 
 .footer .btn.btn-link:hover {
-    color: white;
+    color: var(--primary);
     letter-spacing: 1px;
     box-shadow: none;
 }
