saved my changes

--- a/css/style.css
+++ b/css/style.css
@@ -326,8 +326,8 @@ h6,
 }
 
 .service-item .service-text .btn {
-    width: 31px;
-    height: 31px;
+    width: 40px;
+    height: auto;
     display: inline-flex;
     align-items: center;
     color: var(--dark);
@@ -337,9 +337,9 @@ h6,
     transition: .3s;
 }
 
-.service-item:hover .service-text .btn {
+/* .service-item:hover .service-text .btn {
     width: 120px;
-}
+} */
 
 
 /*** Project Portfolio ***/
