--- a/css/style.css
+++ b/css/style.css
@@ -547,7 +547,7 @@ h6,
 }
 
 .footer .btn.btn-link:hover {
-    color: var(--primary);
+    color: var(--dark);
     letter-spacing: 1px;
     box-shadow: none;
 }
@@ -702,5 +702,9 @@ h6,
 }
 
 .position-relative {
-    width: 25%;
+    width: 20%;
 }
+
+/* .position-relative button {
+    font-size: ;
+} */
