--- a/css/style.css
+++ b/css/style.css
@@ -725,37 +725,37 @@ h6,
 
 
 .dropdown-item-a {
-    transition: 0.9s;
+    transition: 0.9s !important;
 }
 
 .dropdown-item-a:hover {
-    color: #0097d2;
+    color: #0097d2 !important;
 }
 
 .dropdown-item-a {
-    display: block;
-    width: 100%;
-    padding: .25rem 1rem;
-    clear: both;
-    font-weight: 500;
-    color: #000000;
-    text-align: inherit;
-    white-space: nowrap;
-    background-color: transparent;
+    display: block !important;
+    width: 100% !important;
+    padding: .25rem 1rem !important;
+    clear: both !important;
+    font-weight: 500 !important;
+    color: #000000 !important;
+    text-align: inherit !important;
+    white-space: nowrap !important;
+    background-color: transparent !important;
     border: 0
 }
 
 
 .dropdown-item-a:hover,
 .dropdown-item-a:focus {
-    color: #0097d2;
+    color: #0097d2 !important;
     /* background-color: #808080 */
 }
 
 .dropdown-item-a.active,
 .dropdown-item-a:active {
-    color: #0097d2;
-    text-decoration: none;
+    color: #0097d2 !important;
+    text-decoration: none !important;
     /* background-color: #497bb4 */
 }
 
@@ -765,8 +765,11 @@ background-color: rgba(73, 123, 180, 0.8);
 
 .dropdown-item-a.disabled,
 .dropdown-item-a:disabled {
-    color: #adb5bd;
-    pointer-events: none;
-    background-color: transparent
+    color: #adb5bd !important;
+    pointer-events: none !important;
+    background-color: transparent !important;
 }
 
+.btn-check:focus + .btn-primary, .btn-primary:focus {
+    box-shadow: 0 0 0 .1rem rgb(0, 151, 210) !important;
+}
