--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ h6,
     height: auto;
 }
 
-.navbar{
+.navbar {
     height: 100px;
 }
 
@@ -139,7 +139,7 @@ h6,
 }
 
 @media (max-width: 1491.98px) {
-    .navbar .navbar-nav .nav-link  {
+    .navbar .navbar-nav .nav-link {
         margin-right: 0;
         padding: 10px 0;
     }
@@ -202,7 +202,7 @@ h6,
         position: relative;
         min-height: 450px;
     }
-    
+
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
@@ -577,9 +577,11 @@ h6,
 .accordion .accordion-item {
     border-bottom: 1px solid #e5e5e5 !important;
 }
+
 .accordion .accordion-item button[aria-expanded=true] {
     border-bottom: 1px solid var(--dark) !important;
 }
+
 .accordion button {
     position: relative;
     display: block;
@@ -593,18 +595,24 @@ h6,
     background: none;
     outline: none;
 }
-.accordion button:hover, .accordion button:focus {
+
+.accordion button:hover,
+.accordion button:focus {
     cursor: pointer;
     color: var(--dark);
 }
-.accordion button:hover::after, .accordion button:focus::after {
+
+.accordion button:hover::after,
+.accordion button:focus::after {
     cursor: pointer;
     color: var(--dark);
     border: 1px solid var(--dark);
 }
+
 .accordion button .accordion-title {
     padding: 1em 1.5em 1em 0;
 }
+
 .accordion button .icon {
     display: inline-block;
     position: absolute;
@@ -615,6 +623,7 @@ h6,
     border: 1px solid;
     border-radius: 22px;
 }
+
 .accordion button .icon::before {
     display: block;
     position: absolute;
@@ -625,6 +634,7 @@ h6,
     height: 2px;
     background: currentColor;
 }
+
 .accordion button .icon::after {
     display: block;
     position: absolute;
@@ -635,18 +645,22 @@ h6,
     height: 10px;
     background: currentColor;
 }
+
 .accordion button[aria-expanded=true] {
     color: var(--dark);
 }
+
 .accordion button[aria-expanded=true] .icon::after {
     width: 0;
 }
-.accordion button[aria-expanded=true] + .accordion-content {
+
+.accordion button[aria-expanded=true]+.accordion-content {
     opacity: 1;
     max-height: 100%;
     transition: all 200ms linear;
     will-change: opacity, max-height;
 }
+
 .accordion .accordion-content {
     opacity: 0;
     max-height: 0;
@@ -654,21 +668,26 @@ h6,
     transition: opacity 200ms linear, max-height 200ms linear;
     will-change: opacity, max-height;
 }
+
 .accordion .accordion-content p {
     font-size: 1rem;
     font-weight: 300;
     margin: 2em 0;
 }
-.social-buttons a{
+
+.social-buttons a {
     width: 40px;
 }
-.facebook{
+
+.facebook {
     background: #3b5998;
 }
-.twitter{
+
+.twitter {
     background: #1DA1F2;
 }
-.instagram{
+
+.instagram {
     background: #C13584;
 }
 
@@ -701,7 +720,7 @@ h6,
 
 
 .now-shadow:hover {
-    box-shadow: 0 0 45px rgba(0,0,0,.08);
+    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
     transition-duration: 1s;
 }
 
@@ -770,7 +789,8 @@ background-color: rgba(73, 123, 180, 0.8);
     background-color: transparent !important;
 }
 
-.btn-check:focus + .btn-primary, .btn-primary:focus {
+.btn-check:focus+.btn-primary,
+.btn-primary:focus {
     box-shadow: 0 0 0 .1rem rgb(0, 151, 210) !important;
 }
 
@@ -783,4 +803,15 @@ background-color: rgba(73, 123, 180, 0.8);
 
 .plus:hover {
     color: #0097d2 !important;
+}
+
+li {
+    /* list-style-type: none; */
+    /* Убираем маркеры */
+    padding: 5px;
+}
+
+ul {
+    padding-left: 0;
+    /* Сдвигаем список влево */
 }
