--- a/css/style.css
+++ b/css/style.css
@@ -242,9 +242,18 @@ h6,
 /*** Facts & Quote ***/
 .facts,
 .quote {
-    background: rgba(15, 20, 66, 0.6);
+    background-color: rgba(15, 20, 66, 0.6);
 }
 
+.facts {
+    background-image: url(../img/carousel-1.jpg) !important;
+    background-size: cover !important;
+    background-position: center center !important;
+}
+
+.fact  {
+    background-color: rgba(15, 20, 66, 0.6) !important;
+}
 
 /*** Service ***/
 .service-item {
