--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,7 @@ h6,
     text-align: left;
     color: var(--light);
     font-weight: normal;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     transition: .3s;
 }
 
