--- a/css/test.css
+++ b/css/test.css
@@ -402,3 +402,10 @@ a .bg-primary {
         display: none;
     }
 }
+
+
+
+
+.btn-close:focus {
+    box-shadow: 0 0 0 .25rem rgba(0, 151, 210, 0.25) !important;
+}
